--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "natours",
-  "version": "1.0.0",
-  "description": "Learning node, express, and mongodb",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Arman Rajib",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2",
-    "morgan": "^1.10.0"
-  }
+    "name": "natours",
+    "version": "1.0.0",
+    "description": "Learning node, express, and mongodb",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon server.js"
+    },
+    "author": "Arman Rajib",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.21.2",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.9"
+    }
 }
