--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "prod": "NODE_ENV=production nodemon server.js"
     },
     "author": "Arman Rajib",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "morgan": "^1.10.0"
     },
