--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 USER=rajib
 PASSWORD=ahr97@NodeJS
+DATABASE=mongodb+srv://armanrajib:<PASSWORD>@cluster0.8pf4x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=ahr97@MongoDB
