--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "mongodb": "^6.12.0",
+        "mongoose": "^5.13.22",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
