--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "express": "^4.21.2",
         "mongodb": "^6.12.0",
         "mongoose": "^5.13.22",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
