--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "mongodb": "^6.12.0",
         "mongoose": "^5.13.22",
         "morgan": "^1.10.0",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "validator": "^13.12.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
