--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon server.mjs",
-        "prod": "NODE_ENV=production nodemon server.mjs"
+        "prod": "NODE_ENV=production nodemon server.mjs",
+        "debug": "ndb server.mjs"
     },
     "author": "Arman Rajib",
     "license": "ISC",
@@ -21,6 +22,7 @@
         "validator": "^13.12.0"
     },
     "devDependencies": {
+        "ndb": "^1.1.5",
         "nodemon": "^3.1.9"
     }
 }
